# llm

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
configs/: corpus.yaml  dpo_s_dictionary.yaml  model_l.yaml  model_m.yaml  model_s.yaml  model_s_attn_gqa2.yaml  model_s_attn_mha.yaml  model_s_attn_mla.yaml  model_s_attn_mqa.yaml  model_s_gelu.yaml  model_s_layernorm.yaml  model_s_moe_auxloss.yaml  model_s_moe_biasfree.yaml  model_s_mtp.yaml  model_s_notie.yaml  model_s_pos_alibi.yaml  model_s_pos_learned.yaml  model_s_pos_nope.yaml  model_s_pos_sinusoidal.yaml  model_s_postnorm.yaml  model_s_qknorm.yaml  model_scaling_25m.yaml  model_scaling_50m.yaml  model_scaling_5m.yaml  sft_s_dictionary.yaml  sft_s_dictionary_lora_r32_attn.yaml  sft_s_dictionary_lora_r8_attn.yaml  sft_s_dictionary_lora_r8_attnffn.yaml  train_s_baseline.yaml  train_s_baseline_auto.yaml  train_s_cpu_canary.yaml  train_s_lr_sweep_hi.yaml  train_s_lr_sweep_lo.yaml  train_s_lr_sweep_mid.yaml  train_s_p6_baseline_milestones.yaml  train_s_seed_1338.yaml  train_s_seed_1339.yaml  train_s_smoke.yaml  train_s_wave_a_gelu.yaml  train_s_wave_a_layernorm.yaml  (+41 more)
docker/: Dockerfile  entrypoint.sh
docs/: CLOUD.md  CLOUD_GPUHUB.md  DECISIONS.md  EXPERIMENTS.md  ROADMAP.md  TECHNIQUES.md  WANDB.md
experiments/: registry.csv
notebooks/: 00_mps_playground.ipynb  01_corpus_stats.ipynb  02_bpe_from_scratch.ipynb  03_tokenizer_compare.ipynb  04_shapes_walkthrough.ipynb  05_compare_runs.ipynb  06_mla_explained.ipynb  07_scaling_law.ipynb  08_eval_deep_dive.ipynb  (+1 more)
(+946 files in other folders)
